# Halbert

./: .gitignore  CHANGELOG.md  Makefile  README.md
cerebric_core/: README.md  pyproject.toml  requirements-rag.txt
cerebric_core/cerebric_core/: __init__.py
cerebric_core/cerebric_core/alerts/: __init__.py  engine.py
cerebric_core/cerebric_core/approval/: __init__.py  engine.py  simulator.py
cerebric_core/cerebric_core/autonomy/: __init__.py  anomaly_detector.py  budgets.py  guardrails.py  recovery.py
cerebric_core/cerebric_core/config/: __init__.py
cerebric_core/cerebric_core/dashboard/: __init__.py  app.py
cerebric_core/cerebric_core/discovery/: __init__.py  engine.py  learned.py  schema.py
cerebric_core/cerebric_core/eval/: golden.py
cerebric_core/cerebric_core/index/: chroma_index.py
cerebric_core/cerebric_core/ingestion/: hwmon.py  journald.py  jsonl_writer.py  redaction.py  validate.py
cerebric_core/cerebric_core/memory/: __init__.py  retrieval.py  writer.py
cerebric_core/cerebric_core/model/: __init__.py  config_wizard.py  context_handoff.py  hardware_detector.py  loader.py  performance_monitor.py  prompt_manager.py  router.py  training_data.py
cerebric_core/cerebric_core/obs/: dashboard.py  logging.py  span_exporter.py  tracing.py
cerebric_core/cerebric_core/persona/: __init__.py  context_detector.py  manager.py  memory_purge.py
cerebric_core/cerebric_core/platform/: __init__.py  base.py  linux.py  macos.py
cerebric_core/cerebric_core/policy/: engine.py
cerebric_core/cerebric_core/rag/: __init__.py  data_pipeline.py  embeddings.py  (+6 more)
(+422 files in other folders)
